@@ -25,15 +25,11 @@
 #if STDC_HEADERS
 #include <string.h>
 #endif /* STDC_HEADERS */
-#if HAVE_UNISTD_H
-#include <unistd.h>
-#endif /* HAVE_UNISTD_H */
 #if HAVE_ARGP_H
 #include <argp.h>
 #else /* !HAVE_ARGP_H */
 #include "freeipmi-argp.h"
 #endif /* !HAVE_ARGP_H */
-#include <limits.h>
 #include <errno.h>
 
 #include "ipmi-raw.h"
@@ -223,21 +219,7 @@ ipmi_raw_argp_parse (int argc, char **argv, struct ipmi_raw_arguments *cmd_args)
   cmd_args->channel_number = 0;
   cmd_args->slave_address = 0;
   cmd_args->cmd_file = NULL;
-  errno = 0;
-  if ((cmd_args->arg_max = sysconf (_SC_ARG_MAX)) <= 0)
-    {
-      if (errno)
-        {
-          perror ("sysconf");
-          exit (1);
-        }
-      cmd_args->arg_max = LONG_MAX;
-    }
-  if (!(cmd_args->cmd = calloc (cmd_args->arg_max, sizeof (uint8_t))))
-    {
-      perror ("calloc");
-      exit (1);
-    }
+  memset (cmd_args->cmd, '\0', sizeof (uint8_t) * IPMI_RAW_MAX_ARGS);
   cmd_args->cmd_length = 0;
 
   argp_parse (&cmdline_config_file_argp,
